# realsense-rust

./: .gitlab-ci.yml  .prettierrc.toml  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  TESTING.md
examples/: README.md  capture_images.rs  capture_images_async.rs  demo_435i.rs  demo_l515.rs  enumerate_devices.rs  opencv.rs  pose.rs  record_bag.rs  simple.rs
examples/L515/: run_all_sensors.rs
realsense-sys/: Cargo.toml  README.md  build.rs  realsense2.pc
realsense-sys/bindings/: bindings.rs
realsense-sys/c/: rsutil_delegate.c  rsutil_delegate.h
realsense-sys/src/: lib.rs
src/: base.rs  common.rs  config.rs  context.rs  device.rs  device_hub.rs  device_list.rs  docs.rs  error.rs  frame.rs  frame_kind.rs  frame_queue.rs  kind.rs  lib.rs  options.rs  pipeline.rs  pipeline_profile.rs  processing_block.rs  processing_block_kind.rs  processing_block_list.rs  safe.rs  sensor.rs  sensor_kind.rs  stream.rs  stream_profile.rs  stream_profile_kind.rs
src/docs/: architecture.rs
src/frame/: composite.rs  depth.rs  disparity.rs  frame_trait.rs  frame_traits.rs  image.rs  iter.rs  kind.rs  motion.rs  pixel.rs  points.rs  pose.rs  prelude.rs  video.rs
src/kind/: camera_info.rs  color_scheme.rs  distortion_model.rs  exception.rs  extension.rs  format.rs  frame_metadata.rs  hole_filling.rs  option.rs  persistence_control.rs  prelude.rs  product_line.rs  stream_kind.rs  timestamp_domain.rs
src/pipeline/: active.rs  inactive.rs  profile.rs  streaming.rs
src/stream/: profile.rs
tests/: connectivity.rs  connectivity_d400.rs  connectivity_l500.rs
