[package]
authors = ["jerry73204 <jerry73204@gmail.com>", "Jeremy Steward <jeremy.steward@tangramvision.com>", "Brandon Minor <brandon@tangramvision.com>"]
description = "High-level RealSense library in Rust"
documentation = "https://docs.rs/realsense-rust/"
edition = "2018"
homepage = "https://github.com/jerry73204/realsense-rust"
license = "Apache-2.0"
name = "realsense-rust"
repository = "https://github.com/jerry73204/realsense-rust"
version = "0.5.0"

[features]
default = []
buildtime-bindgen = ["realsense-sys/buildtime-bindgen"]
with-nalgebra = ["nalgebra"]

[dependencies]
anyhow = "1.0"
nalgebra = {version = "0.24", optional = true}
num-derive = "0.3"
num-traits = "0.2"
realsense-sys = {version = "0.3.0", path = "realsense-sys"}
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
crossbeam = "0.8"
kiss3d = "0.29"
lazy_static = "1.4"
