[package]
authors = ["jerry73204 <jerry73204@gmail.com>", "Jeremy Steward <jeremy.steward@tangramvision.com>", "Brandon Minor <brandon@tangramvision.com>"]
categories = ["external-ffi-bindings", "computer-vision", "hardware-support"]
description = "High-level RealSense library in Rust"
documentation = "https://docs.rs/realsense-rust/"
edition = "2018"
homepage = "https://gitlab.com/tangram-vision-oss/realsense-rust"
keywords = ["Intel", "RealSense", "Sensor", "Robotics"]
license = "Apache-2.0"
name = "realsense-rust"
readme = "README.md"
repository = "https://gitlab.com/tangram-vision-oss/realsense-rust"
version = "0.5.0"

[features]
default = []
buildtime-bindgen = ["realsense-sys/buildtime-bindgen"]
# This feature does nothing in terms of library functionality / behaviour, but
# is instead for running tests that utilize a single device on the backend.
test-single-device = []
with-nalgebra = ["nalgebra"]

[dependencies]
anyhow = "1.0"
nalgebra = {version = "0.24", optional = true}
num-derive = "0.3"
num-traits = "0.2"
realsense-sys = {version = "0.3.0", path = "realsense-sys"}
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
crossbeam = "0.8"
kiss3d = "0.29"
lazy_static = "1.4"
