[package]
name = "realsense-sys"
description = "Use RealSense SDK C library as crate"
version = "0.3.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/realsense-sys/"
homepage = "https://github.com/jerry73204/realsense-rust"
repository = "https://github.com/jerry73204/realsense-rust"

[dependencies]
# no-realsense-lib
# - This avoids calling the build script in realsense-sys. The build script's
#   original behavior would be to find librealsense, link, and generate
#   the bindings (if buildtime-bindgen is set). `no-realsense-lib` bypasses all
#   of that with an early return. Tests _will fail_ as a result.
no-realsense-lib = []


[build-dependencies]
anyhow = "1.0"
cc = { version = "1.0", features = ["parallel"] }
bindgen = {version = "0.57", optional = true}
lazy_static = "1.4"

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
pkg-config = { version = "0.3"  }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = { version = "0.2" }

[features]
default = []
buildtime-bindgen = ["bindgen"]
doc-only = []

[package.metadata.docs.rs]
features = ["no-realsense-lib"]
